<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Set back log</string>
    <string name="action_settings">Settings</string>
    <string name="adb_tag">ADB log</string>
    <string name="main_tag">Main log</string>
    <string name="radio_tag">Radio log</string>
    <string name="system_tag">System log</string>
    <string name="event_tag">Event log</string>
    <string name="QXDM_tag">QXDM log</string>
    <string name="IP_tag">IP log</string>
    <string name="state_logs_tag">Status log information (non-real-time log, need to manually open and close each crawl corresponding log)</string>
    <string name="Dmesg_tag">Dmesg log</string>
    <string name="dumpstate_tag">dumpstate log</string>
    <string name="dumpsys_tag">dumpsys log</string>
    <string name="Crash_tag">Crash log</string>
    <string name="action_clear_logs">Clear all the log information</string>
    <string name="confirm">confirm</string>
    <string name="clean_logs_msg">Soon will clear all the log information on the SD card, and turn off all the log switch, such as the need to crawl log, please manually open the appropriate log switch, Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="save_location">Storage Location</string>
    <string name="internal_SD">internal SD</string>
    <string name="external_SD">external SD</string>
    <string name="no_sd_msg">No SD card, insert the SD card, reboot and then configure the Log Switch!</string>
    <string name="clear_logs_file_success">All Log Files deleted successfully!</string>
    <string name="clear_logs_ing">Log files are being deleted \u2026</string>
    <string name="ok">OK</string>
    <string name="sd_path_wrong">SD card path error, verify the configuration settings path insert an SD card! (The default is an external SD card)</string>
    <string name="sd_path_switch_success">SD card path switching success</string>
    <string name="sd_path_switch_fail">SD card path switching fails, please verify the existence of the SD card!</string>
    <!-- zhaoyuan add for configqxdm 20160127 start -->
    <string name="config_qxdm_title">ConfigurationQXDM</string>
    <string name="qxdm_configs">Configuration File</string>
    <string name="change_qxdm_fail">Replace QXDM configuration file failed</string>
    <string name="start_qxdm_fail">Log failure associated automatically grab QXDM</string>
    <string name="defaultname">The default configuration QXDM</string>
    <string name="qxdm_notify">As QXDM switch is on, turn off the switch, then re-open!</string>
    <!-- zhaoyuan add for configqxdm 20160127 end -->
</resources>
